--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -34,7 +34,6 @@ body {
     display: flex;
     color: #fff;
     text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
     max-width: 42em;
 }
 
@@ -59,9 +58,8 @@ body {
     border-bottom: .25rem solid transparent;
 }
 
-.nav-masthead .nav-link:hover,
-.nav-masthead .nav-link:focus {
-    border-bottom-color: rgba(255, 255, 255, .25);
+.nav-masthead .nav-link:hover {
+    border-bottom-color: #444;
 }
 
 .nav-masthead .nav-link + .nav-link {
@@ -69,8 +67,8 @@ body {
 }
 
 .nav-masthead .active {
-    color: #fff;
-    border-bottom-color: #fff;
+    color: #222;
+    border-bottom-color: #222;
 }
 
 @media (min-width: 48em) {
@@ -131,4 +129,15 @@ body {
 .textarea-fixedsize{
     height: 300px !important;
     resize: none;
+}
+
+/*
+* Background
+*/
+
+.img-background{
+    background-image: url("/public/map.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+
 }
