add load all paths

--- a/src/main/resources/templates/mymap.html
+++ b/src/main/resources/templates/mymap.html
@@ -56,7 +56,7 @@
 <script src="lib/jquery/dist/jquery.min.js"></script>
 <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="javascript/core.js"></script>
-<script src="javascript/journalEvent.js"></script>
+<script src="javascript/mymapEvent.js"></script>
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=[APIKEY]&callback=initMap">
 </script>
